--- a/exercises/exercise-1.2.qmd
+++ b/exercises/exercise-1.2.qmd
@@ -46,18 +46,18 @@ dem_summary
 ## Questions
 
 1. Try summarizing the data with a [different function](https://dplyr.tidyverse.org/reference/summarise.html#useful-functions) for one or more of the variables. 
-  a. What is the median value of `polyarchy` for The West? 
+  a. What is the median value of `polyarchy` for The West?
   b. What is the max value of `gdp_pc` for Eastern Europe?
   c. What is the standard deviation of `flfp` for Africa?
   d. What is the interquartile range of `women_rep` for the Middle East?
 
 2. Now try grouping by country instead of region. 
 
-  a. What is the median value of `polyarchy` for Sweden? 
+  a. What is the median value of `polyarchy` for Sweden?
   b. What is the max value of `gdp_pc` New Zealand?
   c. What is the standard deviation of `flfp` for Spain?
   d. What is the interquartile range of `women_rep` for Germany?
 
-3. Sort countries in descending order based on the mean value of `gdp_pc` (instead of `polyarchy`). Which country ranks first based on this sorting? 
+3. Sort countries in descending order based on the mean value of `gdp_pc` (instead of the median value of `polyarchy`). Which country ranks first based on this sorting?
 
-4. Now try sorting countries in ascending order based on the median value of `women_rep` (hint: delete "desc" from the `arrange()` call). Which countries rank "highest" in this sorting?
+4. Now try sorting countries in ascending order based on the median value of `women_rep` (hint: delete "desc" from the `arrange()` call). Which country ranks at the "top" of the list?
