--- a/modules/module-2.1.qmd
+++ b/modules/module-2.1.qmd
@@ -43,7 +43,7 @@ The idea is that each visualization you make is going to contain cerain elements
 
 ## Bar charts
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'Making Bar Charts' >}}
+{{< video https://youtu.be/hl02sVTyCRA title = 'Making Bar Charts' >}}
 
 Let's get started with our first visualization--a basic bar chart. Bar charts are good for comparing data across cases. Our aim here is going to be to summarize levels of democracy across different regions like we did in the last lesson, but this time we will illustrate the differences with a chart. 
 
@@ -83,7 +83,7 @@ ggplot(dem_summary, aes(x = reorder(region, -polyarchy), y = polyarchy)) +
 
 ## Histograms
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'Making Histograms'>}}
+{{< video https://youtu.be/LuNDAIQXx9w title = 'Making Histograms'>}}
 
 Now let's do another `ggplot()` call to make a histogram. We use histograms when we want to show how our data are distributed.  
 
@@ -110,7 +110,7 @@ ggplot(dem_women_2015, aes(x = polyarchy)) +
 
 ## Line charts
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc 'Making Line Charts'>}}
+{{< video https://youtu.be/cHos9y261SQ 'Making Line Charts'>}}
 
 Now let's create a line chart. Line charts are usually the best option when we want to illustrate trends in our data. For this visualization, we will try to illustrate Samuel Huntington's waves of democracy by showing how countries representing each of the three waves. The U.S. represents the first wave, Japan the second wave starting with the allied victory in WWII, and Portugal represents the first country to transition in the third wave. 
 
@@ -156,11 +156,12 @@ ggplot(dem_waves_ctrs, aes(x = year, y = polyarchy, color = country)) +
 
 ## Scatter plots
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'Making Scatter Plots'>}}
+{{< video https://youtu.be/Cvme3C268wE title = 'Making Scatter Plots'>}}
 
 The last thing we are going to do in this lesson is to create a scatter plot. We use scatter plots in order to illustrate how two variables relate to each other (or not). In this example, we are going to illustrating modernization theory, which predicts a positive relationship between wealth and democracy, while also incorporating levels of women's representation into our analysis.  
 
 We are going to start with the `dem_women.csv` file we created in Module 1.2. We will then group the data by country and calculate the mean for each variable. Note that in the `group_by()` call we also include `region` because we will want to keep it so that we can color our points by region.
+
 ```{r}
 #| label: ctry_data
 dem_summary_ctry <- read_csv("data/dem_women.csv") |>
